<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="eu.droidit.project0.ButtonActivity">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/spotify_streamer_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f57f17"
            android:text="@string/spotify_streamer_label"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/scores_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f57f17"
            android:text="@string/scores_label"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/library_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f57f17"
            android:text="@string/library_label"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/build_it_bigger_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f57f17"
            android:text="@string/build_it_bigger_label"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/xyz_reader_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f57f17"
            android:text="@string/xyz_reader_label"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/my_own_app_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/captone_label"
            android:layout_margin="5dp"
            android:background="#d50000" />

    </LinearLayout>

</LinearLayout>
